<resources>
    <string name="app_name">CONTROL DE ROTACIÓN 2</string>
    <string name="categoria">SCIENCE / TECHNOLOGY</string>
    <string name="titulo">SPACE SHUTTLE</string>
    <string name="fecha">September 27, 2017</string>
    <string name="contenido">The Space Shuttle was a partially reusable low Earth orbital spacecraft system operated by the U.S. National Aeronautics and Space Administration (NASA), as part of the Space Shuttle program. Its official program name was Space Transportation System (STS), taken from a 1969 plan for a system of reusable spacecraft of which it was the only item funded for development.</string>
    <string name="desc">space_shuttle</string>
</resources>
